Add local storage persistens

--- a/css/site.css
+++ b/css/site.css
@@ -8,10 +8,10 @@ body {
 }
 
 .section-pagetop .title-page {
-    color: #428dff;
+    color: #fff;
     font-size: 3rem;
     text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
-    opacity: 0.9;
+    opacity: 1;
 }
 
 .modal-body,
